# AIGC-Game

./: .env.example  .gitignore  README.md  __init__.py  pyproject.toml  pyproject.toml.backup  requirements.txt  run_chat.py  setup.bat  setup.sh
data/: MEMORY_SKILL.md
data/npc_info/: 1.json  characters.json  haruko.json
data/scene_data/: SampleFlowScenes.json  Scenes0303.json  demo.json  npc_only_scene.json  scene2.json  scene2_1.json  test.json
main/: __init__.py  chat_runner.py
npc/: __init__.py  benchmark.md  readme.md
npc/config/: memory_config.json
npc/dispatch/: graph.py  interface.py  manager.py  test_dispatch.py
npc/dispatch/nodes/: __init__.py  base_dispatch_node.py  dispatch_node_factory.py  npc_conversation_node.py  request_evaluation_node.py  summary_report_node.py
npc/knowledge/: __init__.py  knowledge_store.py  memory_helper.py  memory_synthesizer.py  npc_memory_manager.py
npc/llm_optimization/: test_haruko_prompt.py  test_results.json
npc/multi_npc/: __init__.py  chat_env.py  player_node.py  player_state_manager.py  router_node.py  router_strategies.py
npc/multi_npc/managers/: __init__.py  emotion_manager.py  intention_analyzer.py  memory_manager_extended.py  npc_manager_extended.py  workflow_manager.py  worldstate_manager.py
npc/multi_npc/strategies/: __init__.py  angry_chat_strategy.py  base_strategy.py  casual_chat_strategy.py  npc_only_strategy.py  player_involved_strategy.py
npc/multi_npc/test/: big_scale_intention_demo.py  big_scale_intention_test.py  example_streaming.py  test_chat_env.py  test_memory.py  test_update_goal.py
npc/scene_control/: __init__.py  scene_data.py  scene_manager.py  scene_status.py
npc/scene_control/test/: __init__.py  test_scene_control.py
npc/single_npc/: __init__.py  npc_manager.py  npc_node.py  system_prompt_optimization.py
npc/single_npc/nodes/: base_npc_node.py  casual_chat_node.py  npc_angry_node.py  player_involved_node.py
npc/single_npc/prompts/: __init__.py  casual_chat.txt  relationship_behaviors.py
npc/single_npc/prompts/haruko/: baseprompt.txt
npc/single_npc/tools/: emotion_tool.py  npc_dispatch_tool.py  state_aware_tool.py  tool_manager.py
npc/utils/: WORLDSTATE_OPTIMIZATION.md  base_npc.py  constants.py  emotion_analyzer.py  langgraph_npc_state.py  llm_factory.py  message_processor.py  npc_info.py  npc_info_adapter.py  npc_state_manager.py  playervalidator.py  simple_emotion_analyzer.py  test_worldstate_cot.py
npc/worldstate/: __init__.py  generator.py  matcher.py  system.py  worldstatedata.py
tests/: debug_npc_logic.py  run_dispatch.py  simulate_integrated_workflow.py  test_angry_flow_integration.py  test_casual_chat_tracing.py  test_complete_workflow.py  test_emotion.py  test_emotion_differentiation.py  test_fixed_workflow.py  test_langsmith_trace.py  test_npc_info.py  test_npc_memory_workflow.py  test_workflow_logic.py  test_workflow_order.py
