[tool.poetry]
name = "aigc-game"
version = "0.1.0"
description = "An innovative game project leveraging AI agents for dynamic narrative and player interactions"
authors = ["Your Team"]
readme = "README.md"
packages = [{include = "aigc_game"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# 核心依赖
openai = "^1.95.1"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
langchain = "^0.3.25"
numpy = "^1.26.4"
pytest = "^8.4.2"
openevals = "^0.1.0"
langgraph = "^0.2.70"
langchain-openai = "^0.3.17"
langsmith = "^0.4.27"
typing-extensions = "^4.12.2"
langchain-core = "^0.3.76"
langchain-community = "^0.3.24"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = ">=3.10,<3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
